@@ -160,6 +160,8 @@ class Config(BaseModel):
     qsvencc_devices: dict = Field(default_factory=dict)
     nvencc_devices: dict = Field(default_factory=dict)
 
+    sticky_tabs: bool = False
+
     def encoder_opt(self, profile_name, profile_option_name):
         encoder_settings = getattr(self.profiles[self.selected_profile], profile_name)
         if encoder_settings:
